--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-
+<!doctype html>
+<html lang="ja">
+<meta charset="utf-8">
+<title>OK</title>
+<body style="background:#000;color:#fff;font-size:24px;">
+表示できてます
+</body>
+</html>
