--- a/index.html
+++ b/index.html
@@ -1,8 +1,438 @@
 <!doctype html>
 <html lang="ja">
-<meta charset="utf-8">
-<title>OK</title>
-<body style="background:#000;color:#fff;font-size:24px;">
-表示できてます
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+<title>VN</title>
+
+<style>
+@font-face{
+  font-family:"NewCinemaAStdD";
+  src:url("./FOT-NewCinemaAStd-D.otf") format("opentype");
+  font-display:swap;
+}
+
+html, body{
+  height:100%;
+  margin:0;
+  background:#000;
+  color:#fff;
+  font-family:"NewCinemaAStdD", system-ui, -apple-system, "Hiragino Kaku Gothic ProN", "Noto Sans JP", sans-serif;
+  user-select:none;
+  -webkit-tap-highlight-color:transparent;
+}
+
+/* ===== ステージ ===== */
+#stage{
+  position:fixed;
+  inset:0;
+  overflow:hidden;
+  background:#000;
+}
+
+/* ===== 背景＋立ち絵の表示領域（ウインドウ分を引く） ===== */
+#scene{
+  position:absolute;
+  left:0; right:0; top:0;
+  height:calc(100vh - var(--uiH, 0px));
+  overflow:hidden;
+}
+
+/* 背景：切らない／下揃え（元のまま） */
+.bg{
+  position:absolute;
+  inset:0;
+  background-size:contain;
+  background-position:bottom center;
+  background-repeat:no-repeat;
+  background-color:#000;
+}
+
+/* 立ち絵：背景と同じ下基準（元のまま） */
+.chara{
+  position:absolute;
+  left:50%;
+  bottom:0;
+  transform:translateX(-50%);
+  max-width:100%;
+  max-height:100%;
+  width:auto;
+  height:auto;
+  object-fit:contain;
+  pointer-events:none;
+}
+
+/* ===== メッセージウインドウ（既存・不変更） ===== */
+.ui{
+  position:fixed;
+  left:0; right:0; bottom:0;
+  padding-bottom:env(safe-area-inset-bottom);
+}
+.ui-scale{
+  position:relative;
+  left:50%;
+  transform:translateX(-50%) scale(var(--uiScale,1));
+  transform-origin:bottom center;
+  width:calc(var(--uiBaseW, 640) * 1px);
+}
+.window-img{
+  display:block;
+  width:100%;
+  height:auto;
+}
+
+/* 文字（サイズだけ調整） */
+:root{
+  --nameLeft: 48px;
+  --nameTop: 12px;
+  --nameSize: 24px;
+  --textLeft: 48px;
+  --textRight: 54px;
+  --textTop: 76px;
+  --textSize: 26px;
+  --textLine: 1.55;
+  --textLetter: 0.02em;
+  --hintRight: 28px;
+  --hintBottom: 20px;
+}
+.name{
+  position:absolute;
+  left:var(--nameLeft);
+  top:var(--nameTop);
+  right:60px;
+  font-size:var(--nameSize);
+  letter-spacing:var(--textLetter);
+  color:rgba(255,255,255,.92);
+  text-shadow:0 2px 6px rgba(0,0,0,.65);
+  white-space:nowrap;
+  overflow:hidden;
+  text-overflow:ellipsis;
+  z-index:2;
+}
+.text{
+  position:absolute;
+  left:var(--textLeft);
+  right:var(--textRight);
+  top:var(--textTop);
+  font-size:var(--textSize);
+  line-height:var(--textLine);
+  letter-spacing:var(--textLetter);
+  color:rgba(255,255,255,.90);
+  text-shadow:0 2px 6px rgba(0,0,0,.68);
+  white-space:pre-wrap;
+  min-height:3.2em;
+  z-index:2;
+}
+.hint{
+  position:absolute;
+  right:var(--hintRight);
+  bottom:var(--hintBottom);
+  font-size:18px;
+  opacity:.9;
+  text-shadow:0 2px 6px rgba(0,0,0,.75);
+  display:none;
+  animation:blink 1.2s infinite ease-in-out;
+  z-index:2;
+}
+@keyframes blink{
+  0%,100%{opacity:.25; transform:translateY(0)}
+  50%{opacity:1; transform:translateY(-2px)}
+}
+
+/* タップ */
+.tap{
+  position:fixed;
+  inset:0;
+  z-index:20;
+}
+
+/* ===== 編集UI（既存・最小追加） ===== */
+#editor{
+  position:fixed;
+  left:10px;
+  right:10px;
+  top:10px;
+  z-index:30;
+  background:rgba(0,0,0,.72);
+  border:1px solid rgba(255,255,255,.12);
+  border-radius:12px;
+  padding:10px;
+  backdrop-filter:blur(8px);
+  box-shadow:0 10px 24px rgba(0,0,0,.35);
+}
+.row{ display:flex; gap:8px; flex-wrap:wrap; }
+.row > *{ flex:1 1 160px; }
+label{
+  font-size:12px;
+  color:rgba(255,255,255,.78);
+  display:block;
+  margin-bottom:4px;
+}
+input[type="file"], input[type="text"], textarea, button{
+  width:100%;
+  box-sizing:border-box;
+  border-radius:10px;
+  border:1px solid rgba(255,255,255,.14);
+  background:rgba(255,255,255,.08);
+  color:rgba(255,255,255,.92);
+  padding:10px;
+  font-size:14px;
+  outline:none;
+}
+textarea{
+  min-height:92px;
+  resize:vertical;
+  user-select:text;
+}
+button{
+  background:rgba(255,255,255,.12);
+  font-weight:600;
+}
+.smallNote{
+  font-size:11px;
+  color:rgba(255,255,255,.68);
+  margin-top:6px;
+  line-height:1.35;
+}
+
+/* ✎ボタン */
+#miniBtn{
+  position:fixed;
+  right:10px;
+  top:10px;
+  z-index:25;
+  width:44px;
+  height:44px;
+  border-radius:12px;
+  border:1px solid rgba(255,255,255,.16);
+  background:rgba(0,0,0,.55);
+  color:rgba(255,255,255,.9);
+  display:none;
+  backdrop-filter:blur(8px);
+}
+
+/* 追加：補助テキスト */
+.miniLabel{
+  margin-top:6px;
+  opacity:.85;
+}
+</style>
+</head>
+
+<body>
+<div id="stage">
+  <div id="scene">
+    <div class="bg" id="bg"></div>
+    <img class="chara" id="chara" alt="">
+  </div>
+
+  <div class="ui">
+    <div class="ui-scale" id="uiScale">
+      <img class="window-img" id="windowImg" src="./parts-sf4d7619aab.jpg" alt="">
+      <div class="name" id="nameLayer"></div>
+      <div class="text" id="textLayer"></div>
+      <div class="hint" id="hint">▼</div>
+    </div>
+  </div>
+
+  <div class="tap" id="tap"></div>
+</div>
+
+<div id="editor">
+  <div class="row">
+    <div>
+      <label>背景画像（読み込み：最優先）</label>
+      <input type="file" id="bgFile" accept="image/*">
+      <label class="miniLabel">背景ファイル名（bg/ から。例：bg1.jpg）</label>
+      <input type="text" id="bgPath" placeholder="例: bg1.jpg">
+    </div>
+    <div>
+      <label>立ち絵（読み込み：最優先）</label>
+      <input type="file" id="charaFile" accept="image/*">
+      <label class="miniLabel">立ち絵ファイル名（chara/ から。例：zk.png）</label>
+      <input type="text" id="charaPath" placeholder="例: zk.png">
+    </div>
+  </div>
+
+  <div class="row">
+    <div>
+      <label>キャラ名</label>
+      <input type="text" id="nameInput" value="ジークフリート">
+    </div>
+    <div>
+      <label>（保険）フォント選択</label>
+      <input type="file" id="fontFile" accept=".otf,.ttf,application/font-sfnt,font/otf,font/ttf">
+    </div>
+  </div>
+
+  <label>メッセージ（--- で区切り）</label>
+  <textarea id="msgInput">年が明けたな。
+今年もおまえと、
+切磋琢磨していきたいものだ。
+---
+……こら。近い。</textarea>
+
+  <div class="row">
+    <button id="playBtn">再生</button>
+  </div>
+
+  <div class="smallNote">
+    画面タップ：途中は全文表示／全文後は次へ。最後まで行くと最初に戻ります。<br>
+    bg/ と chara/ は index.html と同じ場所に置いてください。
+  </div>
+</div>
+
+<button id="miniBtn" title="編集">✎</button>
+
+<script>
+const elBg = document.getElementById("bg");
+const elChara = document.getElementById("chara");
+const elName = document.getElementById("nameLayer");
+const elText = document.getElementById("textLayer");
+const elHint = document.getElementById("hint");
+const elUiScale = document.getElementById("uiScale");
+const windowImg = document.getElementById("windowImg");
+
+const editor = document.getElementById("editor");
+const miniBtn = document.getElementById("miniBtn");
+
+const bgFile = document.getElementById("bgFile");
+const charaFile = document.getElementById("charaFile");
+const fontFile = document.getElementById("fontFile");
+const nameInput = document.getElementById("nameInput");
+const msgInput = document.getElementById("msgInput");
+const playBtn = document.getElementById("playBtn");
+const tap = document.getElementById("tap");
+
+const bgPath = document.getElementById("bgPath");
+const charaPath = document.getElementById("charaPath");
+
+let lines = [], idx = 0, timer = null, full = "", cursor = 0, typing = false;
+
+function readAsDataURL(file){
+  return new Promise((resolve, reject) => {
+    const fr = new FileReader();
+    fr.onload = () => resolve(fr.result);
+    fr.onerror = reject;
+    fr.readAsDataURL(file);
+  });
+}
+
+function parseMessages(raw){
+  const parts = raw
+    .split(/\n---\n|^---\n|\n---$|^---$/m)
+    .map(s => s.replace(/\r/g,"").trim())
+    .filter(Boolean);
+  return parts.length ? parts : [""];
+}
+
+async function applyPickedFont(){
+  if(!fontFile.files || !fontFile.files[0]) return;
+  const file = fontFile.files[0];
+  const url = URL.createObjectURL(file);
+  try{
+    const ff = new FontFace("NewCinemaAStdD", `url(${url})`);
+    await ff.load();
+    document.fonts.add(ff);
+  }catch(e){}
+}
+
+/* UIスケール＆UI高さを更新（--uiH を入れる） */
+function updateUILayout(){
+  const baseW = windowImg.naturalWidth || 640;
+  document.documentElement.style.setProperty("--uiBaseW", String(baseW));
+  const s = window.innerWidth / baseW;
+  elUiScale.style.setProperty("--uiScale", String(s));
+  const rect = elUiScale.getBoundingClientRect();
+  document.documentElement.style.setProperty("--uiH", rect.height + "px");
+}
+windowImg.addEventListener("load", updateUILayout);
+addEventListener("resize", updateUILayout);
+
+function stopTyping(){ if(timer){ clearInterval(timer); timer=null; } }
+function finishTyping(){
+  stopTyping();
+  elText.textContent = full;
+  typing = false;
+  elHint.style.display = "block";
+}
+function showLine(i){
+  stopTyping();
+  idx = Math.max(0, Math.min(i, lines.length - 1));
+  full = lines[idx] || "";
+  cursor = 0;
+  elText.textContent = "";
+  typing = true;
+  elHint.style.display = "none";
+  timer = setInterval(() => {
+    cursor++;
+    elText.textContent = full.slice(0, cursor);
+    if(cursor >= full.length) finishTyping();
+  }, 30);
+}
+function next(){
+  if(typing){ finishTyping(); return; }
+  idx++; if(idx >= lines.length) idx = 0;
+  showLine(idx);
+}
+
+function safeName(s){
+  return (s || "").trim().replace(/^\.\/+/, "").replace(/^\/+/, "");
+}
+
+playBtn.addEventListener("click", async () => {
+  await applyPickedFont();
+
+  /* 背景：読み込み優先 → フォルダ指定 */
+  if(bgFile.files && bgFile.files[0]){
+    const u = await readAsDataURL(bgFile.files[0]);
+    elBg.style.backgroundImage = `url("${u}")`;
+  }else{
+    const nm = safeName(bgPath.value);
+    if(nm){
+      elBg.style.backgroundImage = `url("./bg/${encodeURIComponent(nm)}")`;
+    }else{
+      elBg.style.backgroundImage = "none";
+    }
+  }
+
+  /* 立ち絵：読み込み優先 → フォルダ指定 */
+  if(charaFile.files && charaFile.files[0]){
+    const u = await readAsDataURL(charaFile.files[0]);
+    elChara.src = u;
+    elChara.style.display = "block";
+  }else{
+    const nm = safeName(charaPath.value);
+    if(nm){
+      elChara.src = `./chara/${encodeURIComponent(nm)}`;
+      elChara.style.display = "block";
+    }else{
+      elChara.removeAttribute("src");
+      elChara.style.display = "none";
+    }
+  }
+
+  const nm = (nameInput.value || "").trim();
+  elName.textContent = nm || " ";
+  lines = parseMessages(msgInput.value || "");
+  idx = 0;
+
+  editor.style.display = "none";
+  miniBtn.style.display = "block";
+  updateUILayout();
+  showLine(0);
+});
+
+tap.addEventListener("click", () => {
+  if(editor.style.display !== "none") return;
+  next();
+});
+miniBtn.addEventListener("click", () => {
+  stopTyping();
+  editor.style.display = "block";
+  miniBtn.style.display = "none";
+  elHint.style.display = "none";
+});
+</script>
 </body>
 </html>
