Change image source from PNG to JPG format

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ button{
 
   <div class="ui">
     <div class="ui-scale" id="uiScale">
-      <img class="window-img" id="windowImg" src="./parts-sf4d7619aab.png" alt="">
+      <img class="window-img" id="windowImg" src="./parts-sf4d7619aab.jpg" alt="">
       <div class="name" id="nameLayer"></div>
       <div class="text" id="textLayer"></div>
       <div class="hint" id="hint">▼</div>
