--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ html, body{
   background-position:bottom center;
   background-repeat:no-repeat;
   background-color:#000;
+  transform: scale(1.1);
 }
 
 /* 立ち絵：背景と同じ下基準（元のまま） */
