--- a/index.html
+++ b/index.html
@@ -242,6 +242,14 @@ button{
   margin-top:6px;
   opacity:.85;
 }
+
+#next{
+  position:absolute;
+  right:54px;
+  bottom:48px;
+  width:96px;   /* ← ここで大きさを変えられます */
+  height:96px;  /* 例：64px→96pxで1.5倍 */
+}
 </style>
 </head>
 
