--- a/index.html
+++ b/index.html
@@ -266,7 +266,8 @@ button{
       <img class="window-img" id="windowImg" src="./parts-sf4d7619aab.jpg" alt="">
       <div class="name" id="nameLayer"></div>
       <div class="text" id="textLayer"></div>
-      <div class="hint" id="hint"><img id="nextImg" src="./next.png" alt="next"></div>
+      <div class="hint" id="hint"><img id="nextImg" src="./next.png" alt="next" width="300" height="300">
+</div>
     </div>
   </div>
 
