--- a/index.html
+++ b/index.html
@@ -250,6 +250,11 @@ button{
   width:500px;   /* ← ここで大きさを変えられます */
   height:500px;  /* 例：64px→96pxで1.5倍 */
 }
+
+#nextImg{
+  transform: scale(3);
+}
+
 </style>
 </head>
 
