--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ html, body{
 }
 
 .hint img{
-  width:100px;
+  width:28px;
   height:auto;
   display:block;
 }
@@ -253,6 +253,14 @@ button{
 
 #nextImg{
   transform: scale(3);
+}
+
+
+/* FIX: next button size & position */
+#nextImg{
+  width:96px;
+  height:auto;
+  margin-top:-20px;
 }
 
 </style>
