--- a/index.html
+++ b/index.html
@@ -283,13 +283,13 @@ button{
 <div id="editor">
   <div class="row">
     <div>
-      <label>背景画像（読み込み優先）</label>
+      <label>背景画像（700*688）</label>
       <input type="file" id="bgFile" accept="image/*">
       <label class="miniLabel">背景ファイル名</label>
       <select id="bgPath"></select>
     </div>
     <div>
-      <label>立ち絵（読み込み優先）</label>
+      <label>立ち絵（640*688）</label>
       <input type="file" id="charaFile" accept="image/*">
       <label class="miniLabel">立ち絵ファイル名</label>
       <select id="charaPath"></select>
