Change background image format from PNG to JPG

--- a/Lancelot/index.html
+++ b/Lancelot/index.html
@@ -10,7 +10,7 @@
 <style>
 /* 背景（仮） */
 #bg{
-  background-image: url("../bg/temp.png");
+  background-image: url("../bg/temp.jpg");
 }
 
 /* キャラ固定 */
